# neo4j-prefiltering-mcp

./: .gitignore  README.md  pyproject.toml
src/neo4j_prefiltering_mcp/: __init__.py  server.py
